--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -775,6 +775,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "Sharing seeds with other wallets is only possible with BIP39 SeedType.",
   "seedtype_alert_title": "SeedType Alert",
+  "select_a_wallet": "Select a wallet",
   "select_backup_file": "Select backup file",
   "select_buy_provider_notice": "Select a buy provider above. You can skip this screen by setting your default buy provider in app settings.",
   "select_destination": "Please select destination for the backup file.",
@@ -907,6 +908,7 @@
   "swap": "Swap",
   "sweeping_wallet": "Sweeping wallet",
   "sweeping_wallet_alert": "This shouldn’t take long. DO NOT LEAVE THIS SCREEN OR THE SWEPT FUNDS MAY BE LOST.",
+  "switch_wallet": "Switch Wallet",
   "switchToETHWallet": "Please switch to an Ethereum wallet and try again",
   "switchToEVMCompatibleWallet": "Please switch to an EVM compatible wallet and try again (Ethereum, Polygon)",
   "symbol": "Symbol",
