--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -775,6 +775,7 @@
   "seedtype": "Tipos de semillas",
   "seedtype_alert_content": "Compartir semillas con otras billeteras solo es posible con semillas bip39 - un tipo específico de semilla.",
   "seedtype_alert_title": "Alerta de tipo de semillas",
+  "select_a_wallet": "Seleccione una billetera",
   "select_backup_file": "Seleccionar archivo de respaldo",
   "select_buy_provider_notice": "Selecciona un proveedor de compra arriba. Puede omitir esta pantalla configurando su proveedor de compra predeterminado en la configuración de la aplicación.",
   "select_destination": "Selecciona el destino del archivo de copia de seguridad.",
@@ -907,6 +908,7 @@
   "swap": "Cambio",
   "sweeping_wallet": "Barrer billetera (gastar todos los fondos disponibles)",
   "sweeping_wallet_alert": "Esto no debería llevar mucho tiempo. NO DEJES ESTA PANTALLA O SE PUEDEN PERDER LOS FONDOS BARRIDOS",
+  "switch_wallet": "Billetera",
   "switchToETHWallet": "Cambia a una billetera Ethereum e inténtelo nuevamente.",
   "switchToEVMCompatibleWallet": "Cambia a una billetera compatible con EVM e inténtelo nuevamente (Ethereum, Polygon)",
   "symbol": "Símbolo",
