--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -776,6 +776,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "Raba tsaba tare da sauran wallets yana yiwuwa ne kawai tare da Bip39 seedtype.",
   "seedtype_alert_title": "Seedtype farke",
+  "select_a_wallet": "Zaɓi Wallet",
   "select_backup_file": "Zaɓi fayil ɗin madadin",
   "select_buy_provider_notice": "Zaɓi mai ba da kyauta a sama. Zaka iya tsallake wannan allon ta hanyar saita mai ba da isasshen busasshen mai ba da isasshen busasshiyar saiti.",
   "select_destination": "Da fatan za a zaɓi wurin da za a yi wa madadin fayil ɗin.",
@@ -908,6 +909,7 @@
   "swap": "Musya",
   "sweeping_wallet": "Kashi na kasa",
   "sweeping_wallet_alert": "Wannan ba zai samu lokacin mai tsaski. KADA KA SAMU KUNGIYARAN KUHON, ZAMAN DADIN BANKUNCI ZAI HAŘA",
+  "switch_wallet": "Zanen rubutu",
   "switchToETHWallet": "Da fatan za a canza zuwa walat ɗin Ethereum kuma a sake gwadawa",
   "switchToEVMCompatibleWallet": "Da fatan za a canza zuwa walat ɗin EVM mai jituwa kuma a sake gwadawa (Ethereum, Polygon)",
   "symbol": "Alama",
