--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -776,6 +776,7 @@
   "seedtype": "बीज",
   "seedtype_alert_content": "अन्य पर्स के साथ बीज साझा करना केवल BIP39 सीडटाइप के साथ संभव है।",
   "seedtype_alert_title": "बीजगणित अलर्ट",
+  "select_a_wallet": "एक वॉलेट का चयन करें",
   "select_backup_file": "बैकअप फ़ाइल का चयन करें",
   "select_buy_provider_notice": "ऊपर एक खरीद प्रदाता का चयन करें। आप इस स्क्रीन को ऐप सेटिंग्स में अपना डिफ़ॉल्ट बाय प्रदाता सेट करके छोड़ सकते हैं।",
   "select_destination": "कृपया बैकअप फ़ाइल के लिए गंतव्य का चयन करें।",
@@ -908,6 +909,7 @@
   "swap": "बदलना",
   "sweeping_wallet": "स्वीपिंग वॉलेट",
   "sweeping_wallet_alert": "इसमें अधिक समय नहीं लगना चाहिए। इस स्क्रीन को न छोड़ें या स्वैप्ट फंड खो सकते हैं",
+  "switch_wallet": "स्विच वॉलेट",
   "switchToETHWallet": "कृपया एथेरियम वॉलेट पर स्विच करें और पुनः प्रयास करें",
   "switchToEVMCompatibleWallet": "कृपया ईवीएम संगत वॉलेट पर स्विच करें और पुनः प्रयास करें (एथेरियम, पॉलीगॉन)",
   "symbol": "प्रतीक",
