--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -774,6 +774,7 @@
   "seedtype": "Sjemenska vrsta",
   "seedtype_alert_content": "Dijeljenje sjemena s drugim novčanicima moguće je samo s BIP39 sjemenom.",
   "seedtype_alert_title": "Upozorenje o sjemenu",
+  "select_a_wallet": "Odaberite novčanik",
   "select_backup_file": "Odaberite datoteku sigurnosne kopije",
   "select_buy_provider_notice": "Odaberite gornji davatelj kupnje. Ovaj zaslon možete preskočiti postavljanjem zadanog davatelja usluga kupnje u postavkama aplikacija.",
   "select_destination": "Odaberite odredište za datoteku sigurnosne kopije.",
@@ -906,6 +907,7 @@
   "swap": "Mijenjati",
   "sweeping_wallet": "Čisti novčanik",
   "sweeping_wallet_alert": "Ovo ne bi trebalo dugo trajati. NE NAPUŠTAJTE OVAJ ZASLON INAČE SE POBREŠENA SREDSTVA MOGU IZGUBITI",
+  "switch_wallet": "PRIKLJUČAK WALINE",
   "switchToETHWallet": "Prijeđite na Ethereum novčanik i pokušajte ponovno",
   "switchToEVMCompatibleWallet": "Prijeđite na novčanik kompatibilan s EVM-om i pokušajte ponovno (Ethereum, Polygon)",
   "symbol": "Simbol",
