--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -773,6 +773,7 @@
   "seedtype": "Սերմի տեսակ",
   "seedtype_alert_content": "Այլ դրամապանակներով սերմերի փոխանակումը հնարավոր է միայն BIP39 SEEDTYPE- ով:",
   "seedtype_alert_title": "SEEDTYPE ALERT",
+  "select_a_wallet": "Ընտրեք դրամապանակ",
   "select_backup_file": "Ընտրել կրկնօրինակ ֆայլ",
   "select_buy_provider_notice": "Ընտրեք գնման մատակարարը վերևում։ Դուք կարող եք բաց թողնել այս էկրանը ձեր լռելայն գնման մատակարարը հավելվածի կարգավորումներում սահմանելով",
   "select_destination": "Խնդրում ենք ընտրել կրկնօրինակ ֆայլի նպատակակետը",
@@ -904,6 +905,7 @@
   "swap": "Փոխանակել",
   "sweeping_wallet": "Դրամապանակը մաքրվում է",
   "sweeping_wallet_alert": "Սա չի տևի երկար։ Խնդրում ենք չլքել այս էկրանը կամ մաքրված միջոցները կկորչեն։",
+  "switch_wallet": "Անջատեք դրամապանակը",
   "switchToETHWallet": "Խնդրում ենք անցնել Ethereum դրամապանակ և փորձել կրկին",
   "switchToEVMCompatibleWallet": "Խնդրում ենք անցնել EVM համատեղելի դրամապանակ և փորձել կրկին (Ethereum, Polygon)",
   "symbol": "Նշան",
