--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -777,6 +777,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "Berbagi biji dengan dompet lain hanya dimungkinkan dengan BIP39 seedtype.",
   "seedtype_alert_title": "Peringatan seedtype",
+  "select_a_wallet": "Pilih dompet",
   "select_backup_file": "Pilih file cadangan",
   "select_buy_provider_notice": "Pilih penyedia beli di atas. Anda dapat melewatkan layar ini dengan mengatur penyedia pembelian default Anda di pengaturan aplikasi.",
   "select_destination": "Silakan pilih tujuan untuk file cadangan.",
@@ -909,6 +910,7 @@
   "swap": "Menukar",
   "sweeping_wallet": "Dompet menyapu",
   "sweeping_wallet_alert": "Ini seharusnya tidak memakan waktu lama. Jangan tinggalkan layar ini atau dana swept mungkin hilang.",
+  "switch_wallet": "Switch Wallet",
   "switchToETHWallet": "Silakan beralih ke dompet Ethereum dan coba lagi",
   "switchToEVMCompatibleWallet": "Silakan beralih ke dompet yang kompatibel dengan EVM dan coba lagi (Ethereum, Polygon)",
   "symbol": "Simbol",
