--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -775,6 +775,7 @@
   "seedtype": "Seedtype",
   "seedtype_alert_content": "La condivisione di semi con altri portafogli è possibile solo con Bip39 SeedType.",
   "seedtype_alert_title": "Avviso seedType",
+  "select_a_wallet": "Seleziona un portafoglio",
   "select_backup_file": "Seleziona file di backup",
   "select_buy_provider_notice": "Seleziona un provider di acquisto sopra. È possibile saltare questa schermata impostando il provider di acquisto predefinito nelle impostazioni dell'app.",
   "select_destination": "Seleziona la destinazione per il file di backup.",
@@ -907,6 +908,7 @@
   "swap": "Scambio",
   "sweeping_wallet": "Svuota portafoglio",
   "sweeping_wallet_alert": "Questo non dovrebbe richiedere molto tempo. NON LASCIARE QUESTA SCHERMATA O I FONDI DA TRASFERIRE POTREBBERO ANDARE PERSI",
+  "switch_wallet": "Switch Porthet",
   "switchToETHWallet": "Passa a un portafoglio Ethereum e riprova",
   "switchToEVMCompatibleWallet": "Passa a un portafoglio compatibile con EVM e riprova (Ethereum, Polygon)",
   "symbol": "Simbolo",
