--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -775,6 +775,7 @@
   "seedtype": "SeedType",
   "seedtype_alert_content": "他の財布と種子を共有することは、BIP39 SeedTypeでのみ可能です。",
   "seedtype_alert_title": "SeedTypeアラート",
+  "select_a_wallet": "ウォレットを選択します",
   "select_backup_file": "バックアップファイルを選択",
   "select_buy_provider_notice": "上記の購入プロバイダーを選択してください。デフォルトの購入プロバイダーをアプリ設定で設定して、この画面をスキップできます。",
   "select_destination": "バックアップファイルの保存先を選択してください。",
@@ -907,6 +908,7 @@
   "swap": "スワップ",
   "sweeping_wallet": "スイープウォレット",
   "sweeping_wallet_alert": "これには時間がかかりません。この画面から離れないでください。そうしないと、スイープ ファンドが失われる可能性があります",
+  "switch_wallet": "スイッチウォレット",
   "switchToETHWallet": "イーサリアムウォレットに切り替えてもう一度お試しください",
   "switchToEVMCompatibleWallet": "EVM 互換のウォレットに切り替えて再試行してください (イーサリアム、ポリゴン)",
   "symbol": "シンボル",
