--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -774,6 +774,7 @@
   "seedtype": "မျိုးပွားခြင်း",
   "seedtype_alert_content": "အခြားပိုက်ဆံအိတ်များနှင့်မျိုးစေ့များကိုမျှဝေခြင်းသည် BIP39 sebyspe ဖြင့်သာဖြစ်သည်။",
   "seedtype_alert_title": "ပျိုးပင်သတိပေးချက်",
+  "select_a_wallet": "ပိုက်ဆံအိတ်တစ်ခုရွေးပါ",
   "select_backup_file": "အရန်ဖိုင်ကို ရွေးပါ။",
   "select_buy_provider_notice": "အပေါ်ကဝယ်သူတစ် ဦး ကိုရွေးချယ်ပါ။ သင်၏ default 0 ယ်သူအား app settings တွင် setting လုပ်ခြင်းဖြင့်ဤ screen ကိုကျော်သွားနိုင်သည်။",
   "select_destination": "အရန်ဖိုင်အတွက် ဦးတည်ရာကို ရွေးပါ။",
@@ -906,6 +907,7 @@
   "swap": "လဲလှယ်",
   "sweeping_wallet": "ိုက်ဆံအိတ် တံမြက်လှည်း",
   "sweeping_wallet_alert": "ဒါက ကြာကြာမခံသင့်ပါဘူး။ ဤစခရင်ကို ချန်မထားပါနှင့် သို့မဟုတ် ထုတ်ယူထားသော ရန်ပုံငွေများ ဆုံးရှုံးနိုင်သည်",
+  "switch_wallet": "Wallet switch",
   "switchToETHWallet": "ကျေးဇူးပြု၍ Ethereum ပိုက်ဆံအိတ်သို့ ပြောင်းပြီး ထပ်စမ်းကြည့်ပါ။",
   "switchToEVMCompatibleWallet": "ကျေးဇူးပြု၍ EVM တွဲဖက်သုံးနိုင်သော ပိုက်ဆံအိတ်သို့ ပြောင်းပြီး ထပ်စမ်းကြည့်ပါ (Ethereum၊ Polygon)",
   "symbol": "သင်္ကေတ",
