--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -774,6 +774,7 @@
   "seedtype": "Zaadtype",
   "seedtype_alert_content": "Het delen van zaden met andere portefeuilles is alleen mogelijk met BIP39 SeedType.",
   "seedtype_alert_title": "Zaadtype alert",
+  "select_a_wallet": "Selecteer een portemonnee",
   "select_backup_file": "Selecteer een back-upbestand",
   "select_buy_provider_notice": "Selecteer hierboven een koopprovider. U kunt dit scherm overslaan door uw standaard kopenprovider in te stellen in app -instellingen.",
   "select_destination": "Selecteer de bestemming voor het back-upbestand.",
@@ -906,6 +907,7 @@
   "swap": "Ruil",
   "sweeping_wallet": "Vegende portemonnee",
   "sweeping_wallet_alert": "Dit duurt niet lang. VERLAAT DIT SCHERM NIET, ANDERS KAN HET SWEPT-GELD VERLOREN WORDEN",
+  "switch_wallet": "Schakel portemonnee",
   "switchToETHWallet": "Schakel over naar een Ethereum-portemonnee en probeer het opnieuw",
   "switchToEVMCompatibleWallet": "Schakel over naar een EVM-compatibele portemonnee en probeer het opnieuw (Ethereum, Polygon)",
   "symbol": "Symbool",
