--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -774,6 +774,7 @@
   "seedtype": "Sedtype",
   "seedtype_alert_content": "Dzielenie się nasionami z innymi portfelami jest możliwe tylko z BIP39 sededType.",
   "seedtype_alert_title": "Ustanowienie typu sedype",
+  "select_a_wallet": "Wybierz portfel",
   "select_backup_file": "Wybierz plik kopii zapasowej",
   "select_buy_provider_notice": "Wybierz powyższe dostawcę zakupu. Możesz pominąć ten ekran, ustawiając domyślnego dostawcę zakupu w ustawieniach aplikacji.",
   "select_destination": "Wybierz miejsce docelowe dla pliku kopii zapasowej.",
@@ -906,6 +907,7 @@
   "swap": "Wymiana",
   "sweeping_wallet": "Zamiatanie portfela",
   "sweeping_wallet_alert": "To nie powinno zająć dużo czasu. NIE WYCHODŹ Z TEGO EKRANU, W PRZECIWNYM WYPADKU MOŻE ZOSTAĆ UTRACONA ŚRODKI",
+  "switch_wallet": "Portfel przełącz",
   "switchToETHWallet": "Przejdź na portfel Ethereum i spróbuj ponownie",
   "switchToEVMCompatibleWallet": "Przejdź na portfel zgodny z EVM i spróbuj ponownie (Ethereum, Polygon)",
   "symbol": "Symbol",
