--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -775,6 +775,7 @@
   "seedtype": "SEEDTYPE",
   "seedtype_alert_content": "Обмен семенами с другими кошельками возможно только с BIP39 SeedType.",
   "seedtype_alert_title": "SEEDTYPE ALERT",
+  "select_a_wallet": "Выберите кошелек",
   "select_backup_file": "Выберите файл резервной копии",
   "select_buy_provider_notice": "Выберите поставщика покупки выше. Вы можете пропустить этот экран, установив поставщика покупки по умолчанию в настройках приложения.",
   "select_destination": "Пожалуйста, выберите место для файла резервной копии.",
@@ -907,6 +908,7 @@
   "swap": "Менять",
   "sweeping_wallet": "Подметание кошелька",
   "sweeping_wallet_alert": "Это не должно занять много времени. НЕ ПОКИДАЙТЕ ЭТОТ ЭКРАН, ИНАЧЕ ВЫЧИСЛЕННЫЕ СРЕДСТВА МОГУТ БЫТЬ ПОТЕРЯНЫ",
+  "switch_wallet": "Переключить кошелек",
   "switchToETHWallet": "Пожалуйста, переключитесь на кошелек Ethereum и повторите попытку.",
   "switchToEVMCompatibleWallet": "Пожалуйста, переключитесь на кошелек, совместимый с EVM, и повторите попытку (Ethereum, Polygon).",
   "symbol": "Символ",
