--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -774,6 +774,7 @@
   "seedtype": "Seed type",
   "seedtype_alert_content": "Ang pagbabahagi ng mga buto sa iba pang mga pitaka ay posible lamang sa bip39 seedtype.",
   "seedtype_alert_title": "Alerto ng Seedtype",
+  "select_a_wallet": "Pumili ng isang pitaka",
   "select_backup_file": "Piliin ang backup na file",
   "select_buy_provider_notice": "Pumili ng provider ng pagbili sa itaas. Maaari mong laktawan ang screen na ito sa pamamagitan ng pagtatakda ng iyong default na provider ng pagbili sa mga setting ng app.",
   "select_destination": "Mangyaring piliin ang patutunguhan para sa backup na file.",
@@ -906,6 +907,7 @@
   "swap": "Palitan",
   "sweeping_wallet": "Sweeping wallet",
   "sweeping_wallet_alert": "Hindi ito dapat magtagal. HUWAG iwanan ang screen na ito o maaaring mawala ang mga pondo.",
+  "switch_wallet": "Lumipat ng pitaka",
   "switchToETHWallet": "Mangyaring lumipat sa isang Ethereum wallet at subukang muli",
   "switchToEVMCompatibleWallet": "Mangyaring lumipat sa isang EVM compatible na wallet at subukang muli (Ethereum, Polygon)",
   "symbol": "Simbolo",
