--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -775,6 +775,7 @@
   "seedtype": "Насіннєвий тип",
   "seedtype_alert_content": "Спільний доступ до інших гаманців можливе лише за допомогою BIP39 Seedtype.",
   "seedtype_alert_title": "Попередження насінника",
+  "select_a_wallet": "Виберіть гаманець",
   "select_backup_file": "Виберіть файл резервної копії",
   "select_buy_provider_notice": "Виберіть постачальника купівлі вище. Ви можете пропустити цей екран, встановивши свого постачальника купівлі за замовчуванням у налаштуваннях додатків.",
   "select_destination": "Виберіть місце призначення для файлу резервної копії.",
@@ -907,6 +908,7 @@
   "swap": "Обміняти",
   "sweeping_wallet": "Підмітаня гаманця",
   "sweeping_wallet_alert": "Це не повинно зайняти багато часу. НЕ ЗАЛИШАЙТЕ ЦЬОГО ЕКРАНУ, АБО КОШТИ МОЖУТЬ БУТИ ВТРАЧЕНІ",
+  "switch_wallet": "Перемикач гаманця",
   "switchToETHWallet": "Перейдіть на гаманець Ethereum і повторіть спробу",
   "switchToEVMCompatibleWallet": "Перейдіть на гаманець, сумісний з EVM, і повторіть спробу (Ethereum, Polygon)",
   "symbol": "символ",
