--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -772,6 +772,7 @@
   "seedtype": "Loại hạt giống",
   "seedtype_alert_content": "Chia sẻ hạt giống với ví khác chỉ có thể với BIP39 SeedType.",
   "seedtype_alert_title": "Cảnh báo hạt giống",
+  "select_a_wallet": "Chọn một ví",
   "select_backup_file": "Chọn tệp sao lưu",
   "select_buy_provider_notice": "Chọn nhà cung cấp mua ở trên. Bạn có thể bỏ qua màn hình này bằng cách thiết lập nhà cung cấp mua mặc định trong cài đặt ứng dụng.",
   "select_destination": "Vui lòng chọn đích cho tệp sao lưu.",
@@ -903,6 +904,7 @@
   "swap": "Tráo đổi",
   "sweeping_wallet": "Quét ví",
   "sweeping_wallet_alert": "Việc này không nên mất nhiều thời gian. KHÔNG RỜI KHỎI MÀN HÌNH NÀY HOẶC CÁC KHOẢN TIỀN ĐƯỢC QUÉT CÓ THỂ BỊ MẤT.",
+  "switch_wallet": "Chuyển ví",
   "switchToETHWallet": "Vui lòng chuyển sang ví Ethereum và thử lại",
   "switchToEVMCompatibleWallet": "Vui lòng chuyển sang ví tương thích EVM và thử lại (Ethereum, Polygon)",
   "symbol": "Ký hiệu",
