--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -775,6 +775,7 @@
   "seedtype": "Irugbin-seetypu",
   "seedtype_alert_content": "Pinpin awọn irugbin pẹlu awọn gedo miiran ṣee ṣe pẹlu Bip39 irugbin.",
   "seedtype_alert_title": "Ṣajọpọ Seeytype",
+  "select_a_wallet": "Yan apamọwọ kan",
   "select_backup_file": "Select backup file",
   "select_buy_provider_notice": "Yan olupese Ra loke. O le skii iboju yii nipa ṣiṣeto olupese rẹ ni awọn eto App.",
   "select_destination": "Jọwọ yan ibi ti o nlo fun faili afẹyinti.",
@@ -907,6 +908,7 @@
   "swap": "Eepo",
   "sweeping_wallet": "Fi owo iwe iwe wofo",
   "sweeping_wallet_alert": "Yio kọja pada si ikan yii. Kì yoo daadaa leede yii tabi owo ti o ti fi se iwe iwe naa yoo gbe.",
+  "switch_wallet": "Yipada apamọwọ",
   "switchToETHWallet": "Jọwọ yipada si apamọwọ Ethereum ki o tun gbiyanju lẹẹkansi",
   "switchToEVMCompatibleWallet": "Jọwọ yipada si apamọwọ ibaramu EVM ki o tun gbiyanju lẹẹkansi (Ethereum, Polygon)",
   "symbol": "Aami",
