--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -774,6 +774,7 @@
   "seedtype": "籽粒",
   "seedtype_alert_content": "只有BIP39籽粒可以与其他钱包共享种子。",
   "seedtype_alert_title": "籽粒警报",
+  "select_a_wallet": "选择一个钱包",
   "select_backup_file": "选择备份文件",
   "select_buy_provider_notice": "在上面选择买入提供商。您可以通过在应用程序设置中设置默认的购买提供商来跳过此屏幕。",
   "select_destination": "请选择备份文件的目的地。",
@@ -906,6 +907,7 @@
   "swap": "交换",
   "sweeping_wallet": "扫一扫钱包",
   "sweeping_wallet_alert": "\n这应该不会花很长时间。请勿离开此屏幕，否则可能会丢失所掠取的资金",
+  "switch_wallet": "开关钱包",
   "switchToETHWallet": "请切换到以太坊钱包并重试",
   "switchToEVMCompatibleWallet": "请切换到 EVM 兼容钱包并重试（以太坊、Polygon）",
   "symbol": "象征",
