--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -774,6 +774,7 @@
   "seedtype": "Семенна тип",
   "seedtype_alert_content": "Споделянето на семена с други портфейли е възможно само с BIP39 Seedtype.",
   "seedtype_alert_title": "Сигнал за семена",
+  "select_a_wallet": "Изберете портфейл",
   "select_backup_file": "Избор на резервно копие",
   "select_buy_provider_notice": "Изберете доставчик на покупка по -горе. Можете да пропуснете този екран, като зададете вашия доставчик по подразбиране по подразбиране в настройките на приложението.",
   "select_destination": "Моля, изберете дестинация за архивния файл.",
@@ -906,6 +907,7 @@
   "swap": "Разметка",
   "sweeping_wallet": "Метещ портфейл",
   "sweeping_wallet_alert": "Това не трябва да отнема много време. Не оставяйте този екран или пометените средства могат да бъдат загубени.",
+  "switch_wallet": "Превключвайте портфейла",
   "switchToETHWallet": "Моля, преминете към портфейл Ethereum и опитайте отново",
   "switchToEVMCompatibleWallet": "Моля, превключете към портфейл, съвместим с EVM, и опитайте отново (Ethereum, Polygon)",
   "symbol": "Символ",
