--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -774,6 +774,7 @@
   "seedtype": "SeedType",
   "seedtype_alert_content": "Sdílení semen s jinými peněženkami je možné pouze u BIP39 SeedType.",
   "seedtype_alert_title": "Upozornění seedtype",
+  "select_a_wallet": "Vyberte peněženku",
   "select_backup_file": "Vybrat soubor se zálohou",
   "select_buy_provider_notice": "Vyberte výše uvedeného poskytovatele nákupu. Tuto obrazovku můžete přeskočit nastavením výchozího poskytovatele nákupu v nastavení aplikace.",
   "select_destination": "Vyberte cíl pro záložní soubor.",
@@ -906,6 +907,7 @@
   "swap": "Swap",
   "sweeping_wallet": "Zametací peněženka",
   "sweeping_wallet_alert": "To by nemělo trvat dlouho. Nenechávejte tuto obrazovku, jinak mohou být ztraceny prostředky.",
+  "switch_wallet": "Přepněte peněženku",
   "switchToETHWallet": "Přejděte na peněženku Ethereum a zkuste to znovu",
   "switchToEVMCompatibleWallet": "Přepněte na peněženku kompatibilní s EVM a zkuste to znovu (Ethereum, Polygon)",
   "symbol": "Symbol",
