--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -775,6 +775,7 @@
   "seedtype": "Seedtyp",
   "seedtype_alert_content": "Das Teilen von Seeds mit anderen Wallet ist nur mit bip39 Seedype möglich.",
   "seedtype_alert_title": "Seedype-Alarm",
+  "select_a_wallet": "Wählen Sie eine Brieftasche",
   "select_backup_file": "Sicherungsdatei auswählen",
   "select_buy_provider_notice": "Wählen Sie oben einen Anbieter kaufen. Sie können diese Seite überspringen, indem Sie Ihren Standard-Kaufanbieter in den App-Einstellungen festlegen.",
   "select_destination": "Bitte wählen Sie das Ziel für die Sicherungsdatei aus.",
@@ -907,6 +908,7 @@
   "swap": "Tauschen",
   "sweeping_wallet": "Wallet leeren",
   "sweeping_wallet_alert": "Das sollte nicht lange dauern. VERLASSEN SIE DIESEN BILDSCHIRM NICHT, ANDERNFALLS KÖNNEN DIE GELDER VERLOREN GEHEN",
+  "switch_wallet": "Brieftasche schalten",
   "switchToETHWallet": "Bitte wechseln Sie zu einem Ethereum-Wallet und versuchen Sie es erneut",
   "switchToEVMCompatibleWallet": "Bitte wechseln Sie zu einem EVM-kompatiblen Wallet und versuchen Sie es erneut (Ethereum, Polygon)",
   "symbol": "Symbol",
