--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -71,7 +71,7 @@
   "auto_generate_subaddresses": "Générer automatiquement des sous-adresses",
   "automatic": "Automatique",
   "available_balance": "Solde disponible",
-  "available_balance_description": "Le "Solde disponible" ou "Solde confirmé" sont les montants que vous pouvez dépenser immédiatement. Si des fonds apparaissent dans le solde inférieur mais pas dans le solde supérieur, vous devez attendre quelques minutes pour que les fonds entrants obtiennent plus de confirmations réseau. Une fois qu’ils ont reçu plus de confirmations, ils seront utilisables.",
+  "available_balance_description": "Le Solde disponible ou Solde confirmé sont les montants que vous pouvez dépenser immédiatement. Si des fonds apparaissent dans le solde inférieur mais pas dans le solde supérieur, vous devez attendre quelques minutes pour que les fonds entrants obtiennent plus de confirmations réseau. Une fois qu’ils ont reçu plus de confirmations, ils seront utilisables.",
   "avg_savings": "Économies moy.",
   "awaitDAppProcessing": "Veuillez attendre que l'application décentralisée (dApp) termine le traitement.",
   "awaiting_payment_confirmation": "En attente de confirmation de paiement",
@@ -774,6 +774,7 @@
   "seedtype": "Type de graine",
   "seedtype_alert_content": "Le partage de graines avec d'autres portefeuilles n'est possible qu'avec le type de graine BIP39.",
   "seedtype_alert_title": "Alerte Type de Graine",
+  "select_a_wallet": "Sélectionnez un portefeuille",
   "select_backup_file": "Sélectionnez le fichier de sauvegarde",
   "select_buy_provider_notice": "Sélectionnez un fournisseur d'achat ci-dessus. Vous pouvez ignorer cet écran en définissant votre fournisseur d'achat par défaut dans les paramètres de l'application.",
   "select_destination": "Veuillez sélectionner la destination du fichier de sauvegarde.",
@@ -906,6 +907,7 @@
   "swap": "Échanger",
   "sweeping_wallet": "Portefeuille (wallet) de consolidation",
   "sweeping_wallet_alert": "Cela ne devrait pas prendre longtemps. NE QUITTEZ PAS CET ÉCRAN OU LES FONDS TRANSFÉRÉS POURRAIENT ÊTRE PERDUS.",
+  "switch_wallet": "Portefeuille de commutation",
   "switchToETHWallet": "Veuillez passer à un portefeuille (wallet) Ethereum et réessayer",
   "switchToEVMCompatibleWallet": "Veuillez passer à un portefeuille compatible EVM et réessayer (Ethereum, Polygon)",
   "symbol": "Symbole",
