--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -775,6 +775,7 @@
   "seedtype": "시드 유형",
   "seedtype_alert_content": "다른 지갑과의 시드 공유는 BIP39 시드 유형에서만 가능합니다.",
   "seedtype_alert_title": "시드 유형 알림",
+  "select_a_wallet": "지갑을 선택하십시오",
   "select_backup_file": "백업 파일 선택",
   "select_buy_provider_notice": "위에서 구매 제공 업체를 선택하세요. 앱 설정에서 기본 구매 제공 업체를 설정하여 이 화면을 건너뛸 수 있습니다.",
   "select_destination": "백업 파일의 대상을 선택하세요.",
@@ -907,6 +908,7 @@
   "swap": "스왑",
   "sweeping_wallet": "지갑 스윕 중",
   "sweeping_wallet_alert": "오래 걸리지 않습니다. 이 화면을 떠나거나 스윕된 자금을 잃을 수 있습니다.",
+  "switch_wallet": "스위치 지갑",
   "switchToETHWallet": "이더리움 지갑으로 전환하고 다시 시도하세요",
   "switchToEVMCompatibleWallet": "EVM 호환 지갑(이더리움, 폴리곤)으로 전환하고 다시 시도하세요",
   "symbol": "심볼",
