--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -774,6 +774,7 @@
   "seedtype": "เมล็ดพันธุ์",
   "seedtype_alert_content": "การแบ่งปันเมล็ดกับกระเป๋าเงินอื่น ๆ เป็นไปได้เฉพาะกับ bip39 seedtype",
   "seedtype_alert_title": "การแจ้งเตือน seedtype",
+  "select_a_wallet": "เลือกกระเป๋าเงิน",
   "select_backup_file": "เลือกไฟล์สำรอง",
   "select_buy_provider_notice": "เลือกผู้ให้บริการซื้อด้านบน คุณสามารถข้ามหน้าจอนี้ได้โดยการตั้งค่าผู้ให้บริการซื้อเริ่มต้นในการตั้งค่าแอป",
   "select_destination": "โปรดเลือกปลายทางสำหรับไฟล์สำรอง",
@@ -906,6 +907,7 @@
   "swap": "แลกเปลี่ยน",
   "sweeping_wallet": "กวาดกระเป๋าสตางค์",
   "sweeping_wallet_alert": "การดำเนินการนี้ใช้เวลาไม่นาน อย่าออกจากหน้าจอนี้ มิฉะนั้นเงินที่กวาดไปอาจสูญหาย",
+  "switch_wallet": "สลับกระเป๋าเงิน",
   "switchToETHWallet": "โปรดเปลี่ยนไปใช้กระเป๋าเงิน Ethereum แล้วลองอีกครั้ง",
   "switchToEVMCompatibleWallet": "โปรดเปลี่ยนไปใช้กระเป๋าเงินที่รองรับ EVM แล้วลองอีกครั้ง (Ethereum, Polygon)",
   "symbol": "เครื่องหมาย",
