--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -774,6 +774,7 @@
   "seedtype": "Tohum",
   "seedtype_alert_content": "Tohumları diğer cüzdanlarla paylaşmak sadece BIP39 tohumu ile mümkündür.",
   "seedtype_alert_title": "SeedType uyarısı",
+  "select_a_wallet": "Bir Cüzdan Seçin",
   "select_backup_file": "Yedek dosyası seç",
   "select_buy_provider_notice": "Yukarıda bir satın alma sağlayıcısı seçin. App ayarlarında varsayılan satın alma sağlayıcınızı ayarlayarak bu ekranı atlayabilirsiniz.",
   "select_destination": "Lütfen yedekleme dosyası için hedef seçin.",
@@ -906,6 +907,7 @@
   "swap": "Takas",
   "sweeping_wallet": "Süpürme cüzdanı",
   "sweeping_wallet_alert": "Bu uzun sürmemeli. BU EKRANDAN BIRAKMAYIN YOKSA SÜPÜRÜLEN FONLAR KAYBOLABİLİR",
+  "switch_wallet": "Cüzdan",
   "switchToETHWallet": "Lütfen bir Ethereum cüzdanına geçin ve tekrar deneyin",
   "switchToEVMCompatibleWallet": "Lütfen EVM uyumlu bir cüzdana geçin ve tekrar deneyin (Ethereum, Polygon)",
   "symbol": "Sembol",
