--- a/assets/text/Release_Notes.txt
+++ b/assets/text/Release_Notes.txt
@@ -1,7 +1,6 @@
-Enable Ledger for Desktop
-Enable Bitcoin view-only wallets
-Monero, Bitcoin, and Ethereum enhancements
-Allow automatic node switching between trusted nodes
-Enhance node connectivity
+Add Dogecoin to Cake Wallet
+Improve payment flow with QR scanning
+Swap flow improvements
+Silent Payment enhancements
 UI enhancements
 Bug fixes
